log
Wed, May 14, 2025  8:21:04 AM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Wed, May 14, 2025  8:26:16 AM: 
 sudoku.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
52c281b
Wed, May 14, 2025  8:43:11 AM: 
 sudoku.c | 57 ++++++++++++++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 52 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:98:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
sudoku.c: In function 'get_adj_nodes':
sudoku.c:102:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
6b25a29
Wed, May 14, 2025  8:45:10 AM: 
 sudoku.c | 17 ++++++-----------
 1 file changed, 6 insertions(+), 11 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:94:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
sudoku.c: In function 'get_adj_nodes':
sudoku.c:100:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
7d8540c
Wed, May 14, 2025  8:46:00 AM: 
 sudoku.c | 51 +++++++++++++++++++++++++--------------------------
 1 file changed, 25 insertions(+), 26 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:101:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
057d14d
Wed, May 14, 2025  8:46:15 AM: 
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:101:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
3bef16e
Wed, May 14, 2025  8:46:32 AM: 
 sudoku.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
1e6a821
